Colaboratory を使用して作成しました

--- a/haskell_honma_ruichi_ousaka.ipynb
+++ b/haskell_honma_ruichi_ousaka.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_honma_ruichi_ousaka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM/+dhvWVI/70YmkA5LTtna",
+      "authorship_tag": "ABX9TyNV5kVqEUOoxxu2FE5UVR6t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
         "%%capture\r\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": 102,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -1451,7 +1451,7 @@
         "  \r\n",
         "  Control.Monad.join makePutY -- Control.Monad.join :: Monad m => m (m a) -> m a"
       ],
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1474,7 +1474,7 @@
       "source": [
         "!runghc test01.hs"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1499,7 +1499,7 @@
       "source": [
         "!ghc -e ':t Control.Monad.join'"
       ],
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1514,10 +1514,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "cDjrMN_9KIBO",
-        "outputId": "a29e4f95-d92f-45af-94c9-8d5a96789169",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a29e4f95-d92f-45af-94c9-8d5a96789169"
       },
       "source": [
         "# Debug.Trace\r\n",
@@ -1525,7 +1525,7 @@
         "!ghc -e ':t const'\r\n",
         "!ghc -e 'const 1 2'"
       ],
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1543,10 +1543,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "bvcTJwgQLHDD",
-        "outputId": "542a3672-e89b-49f0-e02b-61859f8afafa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "542a3672-e89b-49f0-e02b-61859f8afafa"
       },
       "source": [
         "# p. 56\r\n",
@@ -1558,7 +1558,7 @@
         "!echo '20' |ghc -e 'getContents >>= putStrLn.(\\n -> if n < 30 then \"Young\" else \"Adult\").(read::String->Int).concat.words'\r\n",
         "!echo '50' |ghc -e 'getContents >>= putStrLn.(\\n -> if n < 30 then \"Young\" else \"Adult\").(read::String->Int).concat.words'"
       ],
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1576,16 +1576,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "Bq0LMBelN8JU",
-        "outputId": "1380c94a-6fde-4ee9-9f2b-cb0f97ebd3db",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1380c94a-6fde-4ee9-9f2b-cb0f97ebd3db"
       },
       "source": [
         "# パターンマッチ\r\n",
         "!ghc -e 'let {x=False::Bool} in case x of {True -> \"x is True\"; False -> \"x is False\"}'"
       ],
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1595,6 +1595,139 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DRtDBjJnbgJw",
+        "outputId": "a5073036-318d-439b-9bb3-dc6f8614e163",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 変数パターン\r\n",
+        "!ghc -e $'let {x=4} in case x of {1 -> \"1st\"; 2->\"2nd\";3->\"3rd\";x\\'-> show x\\' ++ \"th\"}'"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\"4th\"\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IsJz5ktBb9b3",
+        "outputId": "a3ec85d2-101c-4199-b6ba-22a36d8fc9a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 変数パターンを標準入力対応のプログラムに書き換える\r\n",
+        "%%writefile test01.hs\r\n",
+        "main = getContents >>= putStrLn . ordinal . (read :: String -> Int) . concat . words\r\n",
+        "\r\n",
+        "ordinal x = case x of\r\n",
+        "  1 -> \"1st\"\r\n",
+        "  2 -> \"2nd\"\r\n",
+        "  3 -> \"3rd\"\r\n",
+        "  x' -> show x' ++ \"th\"\r\n"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing test01.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SpX97PPbdD2g",
+        "outputId": "4379b194-3f86-42ea-8c58-3d1f71499a05",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!echo '1' | runghc test01.hs\r\n",
+        "!echo '2' | runghc test01.hs\r\n",
+        "!echo '3' | runghc test01.hs\r\n",
+        "!echo '4' | runghc test01.hs"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1st\n",
+            "2nd\n",
+            "3rd\n",
+            "4th\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7nol-NQefDGR"
+      },
+      "source": [
+        "# いまここ\r\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "c6Iq7ODGfIe9"
+      },
+      "source": [
+        "# しおり"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CDKlcPNfeTSQ"
+      },
+      "source": [
+        "# ちょっと実験\r\n",
+        "\r\n",
+        "!echo \"100 10\" |ghc -e getContents >>= putStrLn . ordinal . (read :: String -> Int) . concat . words"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "enzyQv94d5ui"
+      },
+      "source": [
+        "# ワイルドカードパターン\r\n",
+        "main = getContents >>= putStrLn . ordinal . (read :: String -> Int) . concat . words\r\n",
+        "\r\n",
+        "ordinal x = case x of\r\n",
+        "  1 -> \"1st\"\r\n",
+        "  2 -> \"2nd\"\r\n",
+        "  3 -> \"3rd\"\r\n",
+        "  x' -> show x' ++ \"th\""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
