Colaboratory を使用して作成しました

--- a/haskell_honma_ruichi_ousaka.ipynb
+++ b/haskell_honma_ruichi_ousaka.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "haskell_honma_ruichi_ousaka.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPa15ys82/KXYSzOUX+9HbO",
+      "authorship_tag": "ABX9TyNPPsRJizH7RlfQK/CP4X2Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2178,11 +2178,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PFXxnFrOOSoJ",
-        "outputId": "ebb0b806-7e8b-420e-fd0e-04175c9cb714",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PFXxnFrOOSoJ",
+        "outputId": "ebb0b806-7e8b-420e-fd0e-04175c9cb714"
       },
       "source": [
         "# p.61 2つめの例\r\n",
@@ -2212,11 +2212,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AOZJcFh2UqkU",
-        "outputId": "e2be3a05-b8b7-4fe8-9ce0-92ea9d7d549c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AOZJcFh2UqkU",
+        "outputId": "e2be3a05-b8b7-4fe8-9ce0-92ea9d7d549c"
       },
       "source": [
         "!echo '10 True' |runghc test01.hs\r\n",
@@ -2239,11 +2239,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tjub-OWuVggC",
-        "outputId": "7023110c-03f2-4694-80ac-1afe9a0a8b98",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tjub-OWuVggC",
+        "outputId": "7023110c-03f2-4694-80ac-1afe9a0a8b98"
       },
       "source": [
         "# p.61 3つめの例 ガードの中で <- を使う\r\n",
@@ -2274,11 +2274,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wWdHpun5V_eF",
-        "outputId": "599c7158-df9d-41ad-b8ee-d42f265f4ed1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wWdHpun5V_eF",
+        "outputId": "599c7158-df9d-41ad-b8ee-d42f265f4ed1"
       },
       "source": [
         "!echo '10 True' |runghc test01.hs\r\n",
@@ -2297,6 +2297,108 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kmg5OI5thZny",
+        "outputId": "a24f773b-73cb-47ce-877f-07df1b389dc6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 関数定義におけるパターンマッチ\r\n",
+        "# p. 62\r\n",
+        "%%writefile test01.hs\r\n",
+        "main =\r\n",
+        "  getContents\r\n",
+        "    >>= print\r\n",
+        "      . f\r\n",
+        "      . (\\[x, y] -> ((read :: String -> Int) x, (read :: String -> Bool) y))\r\n",
+        "      . words\r\n",
+        "\r\n",
+        "f (x1, True) | (q, 0) <- x1 `divMod` 2 = q\r\n",
+        "f (x1, _)    = x1"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting test01.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vrllwuujhkG0",
+        "outputId": "c873da24-4c68-47f3-eb32-4c90f8f7ba7c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!echo '11 True' |runghc test01.hs"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "11\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "P35JJS2YjOv3"
+      },
+      "source": [
+        "# しおり"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IisLC-RLiqru"
+      },
+      "source": [
+        "# p. 62 2つめの例\r\n",
+        "%%writefile test01.hs\r\n",
+        "main =\r\n",
+        "  getContents\r\n",
+        "    >>= putStrLn\r\n",
+        "      . f\r\n",
+        "      . (read :: String -> Int)\r\n",
+        "      . concat\r\n",
+        "      . words\r\n",
+        "# しおり\r\n",
+        "\r\n",
+        "-- f x = if x `mod` 2 == 0 then \"even\" else \"odd\"\r\n",
+        "f x = case (x `mod` 2 == 0) of\r\n",
+        "  True -> \"even\"\r\n",
+        "  _ -> \"odd\""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GKhdFkIli84o"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
