Colaboratory を使用して作成しました

--- a/haskell_honma_ruichi_ousaka.ipynb
+++ b/haskell_honma_ruichi_ousaka.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_honma_ruichi_ousaka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOuwRH6n2VZNBuBfu2roH3A",
+      "authorship_tag": "ABX9TyPnExQChxyfnOjeT07f7C+Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
         "%%capture\r\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": 120,
+      "execution_count": 172,
       "outputs": []
     },
     {
@@ -2842,7 +2842,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a2b6dc8c-d3b9-4b83-f4c7-ad6f5dacebf6"
+        "outputId": "d081d7ab-7903-483b-d1c8-b7bfbce06f91"
       },
       "source": [
         "# 7.4 p.242 Vector\r\n",
@@ -2857,7 +2857,7 @@
         "  print (animals V.!? 5)\r\n",
         "  print (animals V.!? 999)"
       ],
-      "execution_count": null,
+      "execution_count": 173,
       "outputs": [
         {
           "output_type": "stream",
@@ -2875,12 +2875,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4fed27ba-fe5e-48e9-c0b2-f6555705a7bc"
+        "outputId": "3872bca8-7413-4fac-f353-ddc573397cf2"
       },
       "source": [
         "!runghc test.hs"
       ],
-      "execution_count": null,
+      "execution_count": 174,
       "outputs": [
         {
           "output_type": "stream",
@@ -2900,7 +2900,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0f59d224-6704-4099-a6cb-e348cef74395"
+        "outputId": "64b84722-1315-4420-ca18-ae1abc2f854a"
       },
       "source": [
         "# Vectpr p.243\r\n",
@@ -2911,7 +2911,7 @@
         "  let animals = V.fromList [\"Dog\", \"Pig\", \"Cat\", \"Fox\", \"Mouse\", \"Cow\", \"Horse\"]\r\n",
         "  print . V.sum . V.map length $ animals"
       ],
-      "execution_count": null,
+      "execution_count": 175,
       "outputs": [
         {
           "output_type": "stream",
@@ -2929,12 +2929,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "12bd2fba-2494-4b21-e4d4-5c852666d134"
+        "outputId": "6ac9f5a0-2212-4a81-b12d-44b0eca2a917"
       },
       "source": [
         "!runghc test.hs"
       ],
-      "execution_count": null,
+      "execution_count": 176,
       "outputs": [
         {
           "output_type": "stream",
@@ -2949,17 +2949,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "0gFXekj7WLyg",
-        "outputId": "a0953b53-4a31-423f-8822-bc00597b2fb9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7b1635bc-2736-42ac-84d8-b052bca08b4d"
       },
       "source": [
         "# p.64 リスト\r\n",
         "!ghc -e '[1..10]'\r\n",
         "!ghc -e '[1,3..10]'"
       ],
-      "execution_count": 121,
+      "execution_count": 177,
       "outputs": [
         {
           "output_type": "stream",
@@ -2975,17 +2975,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "JUu6wreeWacn",
-        "outputId": "75bfdb53-327f-42fa-f4f9-7735eff20ea9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "284d0d07-87a5-4e4f-a741-133a37d63728"
       },
       "source": [
         "!ghc -e '[1,3..]!!10000' #=> 20001\r\n",
         "!ghc -e 'Data.Vector.fromList [1,3..30000] Data.Vector.! 10000' #=> 20001\r\n",
         "!ghc -e 'Data.Vector.fromList [1,3..30000] Data.Vector.!? 10000' #=> Just 20001"
       ],
-      "execution_count": 136,
+      "execution_count": 178,
       "outputs": [
         {
           "output_type": "stream",
@@ -3002,10 +3002,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "L9zJpEj9X4N0",
-        "outputId": "878e3f06-8861-46bc-f854-c87f87501d96",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "693a6419-6830-47a3-83af-d7723a799651"
       },
       "source": [
         "!ghc -e '1:2:3:[]' #=> [1,2,3]\r\n",
@@ -3014,7 +3014,7 @@
         "!ghc -e 'head []' #=> <interactive>: Prelude.head: empty list\r\n",
         "!ghc -e 'tail []' #=> <interactive>: Prelude.head: empty list"
       ],
-      "execution_count": 148,
+      "execution_count": 179,
       "outputs": [
         {
           "output_type": "stream",
@@ -3033,16 +3033,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "3BgEoUU5Y4vC",
-        "outputId": "a8fce4b1-cc01-4d27-ddec-ad7a0ff2efd6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ab8fc120-9013-4bbd-b54d-9beab80c252a"
       },
       "source": [
         "!ghc -e 'map (2 *) [1,2,3]' #=> [2,4,6]\r\n",
         "!ghc -e 'filter (\\n -> n `mod` 3 == 0) [1..10]' #=> [3,6,9]"
       ],
-      "execution_count": 150,
+      "execution_count": 180,
       "outputs": [
         {
           "output_type": "stream",
@@ -3057,7 +3057,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "c85aciehZkOq"
+        "id": "c85aciehZkOq",
+        "outputId": "16ab4b3c-c0c0-4fb1-b971-6739f5edb324",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# foldr, foldl\r\n",
@@ -3073,33 +3077,41 @@
         "!ghc -e 'foldr (-) 0 [1,2,3,4,5,6,7]' #=> 4\r\n",
         "!ghc -e '(1-(2-(3-(4-(5-(6-(7-0)))))))' #=> 4"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "vhqdCkeArwwy"
-      },
-      "source": [
-        "\r\n",
-        "# いまここ"
+      "execution_count": 181,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-5\n",
+            "-55\n",
+            "\n",
+            "1\n",
+            "-1\n",
+            "2\n",
+            "-2\n",
+            "3\n",
+            "-3\n",
+            "4\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "1w0DEuqOkWK7",
-        "outputId": "7ca30f4d-758c-468d-c6a2-04107026d41b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "19e53267-efad-4e70-dc60-cf116fe76b30"
       },
       "source": [
         "# Data.Char.toUpper\r\n",
         "!ghc -e 'map Data.Char.toUpper \"this is a Pen\"'"
       ],
-      "execution_count": 160,
+      "execution_count": 182,
       "outputs": [
         {
           "output_type": "stream",
@@ -3114,10 +3126,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ciHBE8xCkoK9",
-        "outputId": "1072eded-d873-42ea-8e91-056c14204ad4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ad4d1b81-2ba6-4694-f21a-02a4559b0893"
       },
       "source": [
         "# (++)\r\n",
@@ -3125,7 +3137,7 @@
         "# concat\r\n",
         "!ghc -e 'concat [\"The list contains \",show [1,2,3], \".\"]'"
       ],
-      "execution_count": 164,
+      "execution_count": 183,
       "outputs": [
         {
           "output_type": "stream",
@@ -3141,10 +3153,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "9Up9PfZClLrw",
-        "outputId": "e8567590-a392-4f9a-b17e-9463873a1d9e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e4e48569-ff3d-4f90-8aa6-6dec1198e672"
       },
       "source": [
         "# タプル\r\n",
@@ -3152,7 +3164,7 @@
         "!ghc -e 'let x=(True, [1,2,3])::(Bool, [Int]) in fst x'\r\n",
         "!ghc -e 'let x=(True, [1,2,3])::(Bool, [Int]) in snd x'"
       ],
-      "execution_count": 169,
+      "execution_count": 184,
       "outputs": [
         {
           "output_type": "stream",
@@ -3169,16 +3181,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "WxuV_ZMAlpSQ",
-        "outputId": "97ccb8e5-39ad-4675-c7b5-b8223387b453",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "588ff468-9f7b-44d0-f59c-941f4b6b9c9f"
       },
       "source": [
         "# fst, snd 以上の時\r\n",
         "!ghc -e 'let {x=(1,2,3); (_,_,n)=x} in n' #=> 3"
       ],
-      "execution_count": 171,
+      "execution_count": 185,
       "outputs": [
         {
           "output_type": "stream",
@@ -3197,7 +3209,7 @@
       "source": [
         "# Maybe"
       ],
-      "execution_count": null,
+      "execution_count": 186,
       "outputs": []
     },
     {
@@ -3209,8 +3221,18 @@
         "# いまここ\r\n",
         "# p.67"
       ],
-      "execution_count": null,
+      "execution_count": 187,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vhqdCkeArwwy"
+      },
+      "source": [
+        "\r\n",
+        "# いまここ"
+      ]
     }
   ]
 }
