Colaboratory を使用して作成しました

--- a/colabmarkdown.ipynb
+++ b/colabmarkdown.ipynb
@@ -6,7 +6,7 @@
       "name": "colabmarkdown.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNvqU0Pu5RX1PNpixk5ojnb",
+      "authorship_tag": "ABX9TyM6TYOL4lsT4oup+qoQ2FZ4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -307,6 +307,53 @@
         "      \\vdots  & \\vdots  & \\ddots & \\vdots  \\\\\n",
         "      a_{m,1} & a_{m,2} & \\cdots & a_{m,n}\n",
         "   \\end{pmatrix}$\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NJfHve4aFKNU"
+      },
+      "source": [
+        "$$\r\n",
+        "\\begin{align}\r\n",
+        "y &= x^2  \\\\\r\n",
+        "lkj;lkj &= j\r\n",
+        "\\end{align}\r\n",
+        "$$"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B8Hv2ocsFvtU",
+        "outputId": "09dd486e-f123-4353-b234-dc5c1ec171ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        }
+      },
+      "source": [
+        "%%latex\r\n",
+        "\\begin{align}\r\n",
+        "y &= x^2  \\\\\r\n",
+        "lkj;lkj &= j\r\n",
+        "\\end{align}"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "\\begin{align}\ny &= x^2  \\\\\nlkj;lkj &= j\n\\end{align}",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
       ]
     },
     {
