Colaboratory を使用して作成しました

--- a/haskell_honma_ruichi_ousaka.ipynb
+++ b/haskell_honma_ruichi_ousaka.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_honma_ruichi_ousaka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNLbQyR+UPGBY591/NP8B6U",
+      "authorship_tag": "ABX9TyOBjhjJNf+V9uIeupETGR0c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
         "%%capture\r\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": null,
+      "execution_count": 100,
       "outputs": []
     },
     {
@@ -3640,10 +3640,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "eZt_5Anp9x3W",
-        "outputId": "cc8d4235-a194-464b-fe52-bb999121fb6f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cc8d4235-a194-464b-fe52-bb999121fb6f"
       },
       "source": [
         "# for , while のようなループのための構文は存在しない\r\n",
@@ -3653,7 +3653,7 @@
         "\r\n",
         "main = print $ fact 10"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3668,15 +3668,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "cKf6KtxHKMOF",
-        "outputId": "3009455f-d725-414b-8915-63b2ae3d7dc8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3009455f-d725-414b-8915-63b2ae3d7dc8"
       },
       "source": [
         "!runghc test.hs"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3691,10 +3691,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "PQ7YTaeaLN8O",
-        "outputId": "8eb64410-d7a3-4402-877e-0fe02da0ccbd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8eb64410-d7a3-4402-877e-0fe02da0ccbd"
       },
       "source": [
         "# 上のプログラムを case 式で書き直す\r\n",
@@ -3706,7 +3706,7 @@
         "\r\n",
         "main = print $ fact 10\r\n"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3732,10 +3732,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "xGUyN9piNzHv",
-        "outputId": "56d293a1-a094-4ccf-cb11-71a6253fdfc5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "56d293a1-a094-4ccf-cb11-71a6253fdfc5"
       },
       "source": [
         "# fizz-buzz\r\n",
@@ -3753,7 +3753,7 @@
         "        loop (n + 1)\r\n",
         "      | otherwise = return ()"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3779,10 +3779,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ixuq8S0MQsE-",
-        "outputId": "8be51617-ad96-4919-a6b9-aeaa087a2014",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "be174426-0fa5-4451-a6fa-b2490061a31c"
       },
       "source": [
         "# 上のプログラムは loop を使っているのであまり haskell 的でない\r\n",
@@ -3800,7 +3800,7 @@
         "  let (d ~> s) n = s <$ guard (n `mod` d == 0)\r\n",
         "   in fromMaybe . show <*> 3 ~> \"Fizz\" <> 5 ~> \"Buzz\""
       ],
-      "execution_count": 86,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "stream",
@@ -3814,13 +3814,44 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OXVVqdfzQ7XT"
+        "id": "OXVVqdfzQ7XT",
+        "outputId": "4b95c2b9-f71d-401b-ce91-21749b988b8c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!runghc test.hs"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "Fizz\n",
+            "4\n",
+            "Buzz\n",
+            "Fizz\n",
+            "7\n",
+            "8\n",
+            "Fizz\n",
+            "Buzz\n",
+            "11\n",
+            "Fizz\n",
+            "13\n",
+            "14\n",
+            "FizzBuzz\n",
+            "16\n",
+            "17\n",
+            "Fizz\n",
+            "19\n",
+            "Buzz\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -3850,10 +3881,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "dXEfc41HTt5P",
-        "outputId": "06bcb9c9-5273-41c8-be1f-1f55a7c1c00a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "06bcb9c9-5273-41c8-be1f-1f55a7c1c00a"
       },
       "source": [
         "# さて次は (<>) と <*> \r\n",
@@ -3877,7 +3908,7 @@
         "  let (d ~> s) n = s <$ guard (n `mod` d == 0)\r\n",
         "    in (3 ~> \"Fizz\") <> (5 ~> \"Buzz\")\r\n"
       ],
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3892,15 +3923,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "8Zs1_Z9siITb",
-        "outputId": "55fcbd0d-1c1e-456b-c1df-08e0ebe16c57",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "55fcbd0d-1c1e-456b-c1df-08e0ebe16c57"
       },
       "source": [
         "!runghc test.hs"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3915,10 +3946,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "kFvE-_o4mUPi",
-        "outputId": "209b1254-3bb0-4bbe-ebde-fcf47472de76",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "209b1254-3bb0-4bbe-ebde-fcf47472de76"
       },
       "source": [
         "%%writefile test.hs\r\n",
@@ -3944,7 +3975,7 @@
         "  let (d ~> s) n = s <$ guard (n `mod` d == 0)\r\n",
         "   in fromMaybe . show <*> 3 ~> \"Fizz\" <> 5 ~> \"Buzz\""
       ],
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3962,6 +3993,241 @@
       },
       "source": [
         "!runghc test.hs"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ReP8lwA84lcA"
+      },
+      "source": [
+        "# FizzBuzz\r\n",
+        "上のコードはちょっと難しかったので、もっとやさしいのを探す、"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q_rMAPeI4lKX",
+        "outputId": "a3bae3cc-6697-4056-b3e9-e4606a8837b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# qiita の自称初心者のコード\r\n",
+        "# https://qiita.com/KNaito/items/0831496d4bef45e10e94\r\n",
+        "%%writefile test.hs\r\n",
+        "\r\n",
+        "import Control.Monad\r\n",
+        "\r\n",
+        "main = fizzBuzz 20\r\n",
+        "\r\n",
+        "fizzBuzz :: Integer -> IO()\r\n",
+        "fizzBuzz num = mapM_ (putStrLn . makeMessage) [1..num] \r\n",
+        "\r\n",
+        "makeMessage :: Integer -> String\r\n",
+        "makeMessage num \r\n",
+        "  | isFizz && isBuzz = \"FizzBuzz\"\r\n",
+        "  | isFizz = \"Fizz\"\r\n",
+        "  | isBuzz = \"Buzz\"\r\n",
+        "  | otherwise = show num\r\n",
+        "  where \r\n",
+        "    isFizz = num `mod` 3 == 0\r\n",
+        "    isBuzz = num `mod` 5 == 0"
+      ],
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting test.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "J8ZAWWM-4zFp"
+      },
+      "source": [
+        "!runghc test.hs"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C0O8OEOk5hbP",
+        "outputId": "c862c937-dfc7-45d1-c3be-385cf236f739",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# すこし書き換える\r\n",
+        "# ついでに 20 とかの入力を標準入力にしよう\r\n",
+        "%%writefile test.hs\r\n",
+        "import Control.Monad\r\n",
+        "\r\n",
+        "main = \r\n",
+        "    getContents >>=\r\n",
+        "     mapM_ (putStrLn . fizzBuzz)\r\n",
+        "    .(\\num -> [1..num])\r\n",
+        "    . read\r\n",
+        "    . head\r\n",
+        "    . words\r\n",
+        "\r\n",
+        "fizzBuzz :: Integer -> String\r\n",
+        "fizzBuzz num \r\n",
+        "  | isFizz && isBuzz = \"FizzBuzz\"\r\n",
+        "  | isFizz = \"Fizz\"\r\n",
+        "  | isBuzz = \"Buzz\"\r\n",
+        "  | otherwise = show num\r\n",
+        "  where \r\n",
+        "    isFizz = num `mod` 3 == 0\r\n",
+        "    isBuzz = num `mod` 5 == 0"
+      ],
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting test.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "puEZJn4W7iu_"
+      },
+      "source": [
+        "!echo 20 | runghc test.hs"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P12ZrBZL72TD",
+        "outputId": "9b75ea90-9408-46a5-f2c3-521014532927",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# where を使わずに let に書き換える\r\n",
+        "# うまく行かないので外出しにしたのと、if 式にしたらガードにしろと Hlint に叱られた。\r\n",
+        "%%writefile test.hs\r\n",
+        "import Control.Monad\r\n",
+        "\r\n",
+        "main =\r\n",
+        "  getContents\r\n",
+        "    >>= mapM_ (putStrLn . fizzBuzz)\r\n",
+        "      . (\\num -> [1 .. num])\r\n",
+        "      . read\r\n",
+        "      . head\r\n",
+        "      . words\r\n",
+        "\r\n",
+        "fizzBuzz :: Integer -> String\r\n",
+        "fizzBuzz num =\r\n",
+        "  if isFizz  num && isBuzz num \r\n",
+        "    then \"FizzBuzz\"\r\n",
+        "    else\r\n",
+        "      if isFizz num \r\n",
+        "        then \"Fizz\"\r\n",
+        "        else\r\n",
+        "          if isBuzz num \r\n",
+        "            then \"Buzz\"\r\n",
+        "            else show num\r\n",
+        "\r\n",
+        "isFizz num = num `mod` 3 == 0\r\n",
+        "\r\n",
+        "isBuzz num = num `mod` 5 == 0"
+      ],
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting test.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lnezpbv4-4Id"
+      },
+      "source": [
+        "!echo 20 | runghc test.hs"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6Ori2GgUB_n-",
+        "outputId": "87d2d05b-03d0-4d1d-c2e0-df0cad9a7a8b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# case を使ってみる\r\n",
+        "%%writefile test.hs\r\n",
+        "import Control.Monad\r\n",
+        "\r\n",
+        "main =\r\n",
+        "  getContents\r\n",
+        "    >>= mapM_ (putStrLn . fizzBuzz)\r\n",
+        "      . (\\num -> [1 .. num])\r\n",
+        "      . read\r\n",
+        "      . head\r\n",
+        "      . words\r\n",
+        "\r\n",
+        "fizzBuzz :: Integer -> String\r\n",
+        "fizzBuzz num = case num of\r\n",
+        "  x\r\n",
+        "    | isFizz x && isBuzz x -> \"FizzBuzz\"\r\n",
+        "    | isFizz x -> \"Fizz\"\r\n",
+        "    | isBuzz x -> \"Buzz\"\r\n",
+        "    | otherwise -> show num\r\n",
+        "\r\n",
+        "isFizz num = num `mod` 3 == 0\r\n",
+        "\r\n",
+        "isBuzz num = num `mod` 5 == 0"
+      ],
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting test.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "94fb4AB6CH5w"
+      },
+      "source": [
+        "!echo 20 | runghc test.hs"
       ],
       "execution_count": null,
       "outputs": []
